--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "installCommand": "npm install --force",
+    "installCommand": "rm -f pnpm-lock.yaml && npm install --force --legacy-peer-deps",
     "buildCommand": "npm run build",
     "engines": {
         "node": ">=18.0.0"
